Fixed: search box overflow.

--- a/src/css/components/Component.pcss
+++ b/src/css/components/Component.pcss
@@ -53,7 +53,6 @@
 }
 
 .Component__searchBoxInputs {
-  width: 280px;
   margin-bottom: 24px;
 }
 
